--- a/ci/prow/Makefile
+++ b/ci/prow/Makefile
@@ -41,6 +41,8 @@ update-boskos-config: get-cluster-credentials
 update-cluster: get-cluster-credentials
 	kubectl apply -f cluster.yaml
 
+update-full: get-cluster-credentials update-cluster update-config update-boskos
+
 test:
 	@echo "*** Checking config generator for prow and testgrid"
 	$(eval TMP_YAML_PROW := $(shell mktemp))
