--- a/ci/prow/Makefile
+++ b/ci/prow/Makefile
@@ -19,27 +19,36 @@ JOB_NAMESPACE ?= test-pods
 
 PROW_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 TESTGRID_DIR := $(PROW_DIR)/../testgrid
+UNSET_CONTEXT := kubectl config unset current-context
 
 get-cluster-credentials:
 	gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"
+
+unset-cluster-credentials:
+	$(UNSET_CONTEXT)
 
 config:
 	go run make_config.go --prow-config-output="$(PROW_DIR)/config.yaml" --testgrid-config-output="$(TESTGRID_DIR)/config.yaml" config_knative.yaml
 
 update-config: get-cluster-credentials
 	kubectl create configmap config --from-file=config.yaml=config.yaml --dry-run -o yaml | kubectl replace configmap config -f -
+	$(UNSET_CONTEXT)
 
 update-plugins: get-cluster-credentials
 	kubectl create configmap plugins --from-file=plugins.yaml=plugins.yaml --dry-run -o yaml | kubectl replace configmap plugins -f -
+	$(UNSET_CONTEXT)
 
 update-boskos: get-cluster-credentials
 	kubectl apply -f boskos/config.yaml
+	$(UNSET_CONTEXT)
 
 update-boskos-config: get-cluster-credentials
 	kubectl create configmap resources --from-file=config=boskos/resources.yaml --dry-run -o yaml | kubectl --namespace="$(JOB_NAMESPACE)" replace configmap resources -f -
+	$(UNSET_CONTEXT)
 
 update-cluster: get-cluster-credentials
 	kubectl apply -f cluster.yaml
+	$(UNSET_CONTEXT)
 
 test:
 	@echo "*** Checking config generator for prow and testgrid"
