--- a/ci/prow/cluster.yaml
+++ b/ci/prow/cluster.yaml
@@ -12,7 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# This file contains Kubernetes YAML files for the most important prow components.
+# Definitions for the most important Prow components.
+
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -386,4 +387,29 @@ spec:
       - name: oauth
         secret:
           secretName: oauth-token
-
+---
+apiVersion: v1
+kind: LimitRange
+metadata:
+  name: mem-limit-range
+  namespace: test-pods
+spec:
+  limits:
+    - default:
+        memory: 8Gi
+      defaultRequest:
+        memory: 2Gi
+      type: Container
+---
+apiVersion: v1
+kind: LimitRange
+metadata:
+  name: cpu-limit-range
+  namespace: test-pods
+spec:
+  limits:
+    - default:
+        cpu: 4000m
+      defaultRequest:
+        cpu: 1000m
+      type: Container
