--- a/ci/prow/plugins.yaml
+++ b/ci/prow/plugins.yaml
@@ -20,7 +20,8 @@ approve:
   ignore_review_state: false
 
 repo_milestone:
-  knative:
+  # Default maintainer
+  '':
     # You can curl the following endpoint in order to determine the github ID of
     # your team responsible for maintaining the milestones:
     # curl -H "Authorization: token <token>" https://api.github.com/orgs/<org-name>/teams
