--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -14,6 +14,12 @@
 
 presubmits:
   knative/serving:
+    - nil:
+      legacy-branches:
+      - release-0.4
+      - release-0.5
+      - release-0.6
+      - release-0.7
     - build-tests: true
     - unit-tests: true
     - integration-tests: true
