--- a/ci/prow/templates/prow_periodic_custom_job.yaml
+++ b/ci/prow/templates/prow_periodic_custom_job.yaml
@@ -4,6 +4,8 @@
   agent: kubernetes
   decorate: true
   [[indent_section 4 "decoration_config" .Base.DecorationConfig]]
+  [[indent_array_section 4 "branches" .Base.Branches]]
+  [[indent_array_section 4 "skip_branches" .Base.SkipBranches]]
   [[indent_section 2 "extra_refs" .Base.ExtraRefs]]
   spec:
     containers:
