--- a/ci/prow/templates/prow_periodic_test_job.yaml
+++ b/ci/prow/templates/prow_periodic_test_job.yaml
@@ -4,6 +4,8 @@
   [[indent_section 4 "labels" .Base.Labels]]
   decorate: true
   [[indent_section 2 "extra_refs" .Base.ExtraRefs]]
+  [[indent_array_section 4 "branches" .Base.Branches]]
+  [[indent_array_section 4 "skip_branches" .Base.SkipBranches]]
   spec:
     containers:
     - image: [[.Base.Image]]
