--- a/ci/prow/templates/prow_postsubmit_gocoverage_job.yaml
+++ b/ci/prow/templates/prow_postsubmit_gocoverage_job.yaml
@@ -5,6 +5,8 @@
     [[indent_section 8 "labels" .Base.Labels]]
     decorate: true
     [[.Base.PathAlias]]
+    [[indent_array_section 4 "branches" .Base.Branches]]
+    [[indent_array_section 4 "skip_branches" .Base.SkipBranches]]
     spec:
       containers:
       - image: [[.Base.Image]]
