--- a/ci/prow/templates/prow_presubmit_gocoverate_job.yaml
+++ b/ci/prow/templates/prow_presubmit_gocoverate_job.yaml
@@ -8,6 +8,8 @@
     optional: true
     decorate: true
     [[.Base.PathAlias]]
+    [[indent_array_section 4 "branches" .Base.Branches]]
+    [[indent_array_section 4 "skip_branches" .Base.SkipBranches]]
     spec:
       containers:
       - image: [[.Base.Image]]
