--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -4076,6 +4076,9 @@ periodics:
       - name: prow-auto-bumper-github-token
         mountPath: /etc/prow-auto-bumper-github-token
         readOnly: true
+      - name: prow-updater-robot-ssh-key
+        mountPath: /root/.ssh
+        readOnly: true
     volumes:
     - name: test-account
       secret:
@@ -4083,6 +4086,9 @@ periodics:
     - name: prow-auto-bumper-github-token
       secret:
         secretName: prow-auto-bumper-github-token
+    - name: prow-updater-robot-ssh-key
+      secret:
+        secretName: prow-updater-robot-ssh-key
 - cron: "15 9 * * *"
   name: ci-knative-backup-artifacts
   agent: kubernetes
