--- a/ci/prow/boskos/config_start.yaml
+++ b/ci/prow/boskos/config_start.yaml
@@ -18,6 +18,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: resources
-  namespace: boskos-pods
+  namespace: test-pods
 data:
   resources: ""
